# MagicCursor

./: .babelrc  .eslintrc.json  README.md  build.bat  build.sh  package.json  tsconfig.json  webpack.config.js
source/: manifest.json
source/Background/: index.ts
source/ContentScript/: index.tsx  magic-mouse.tsx
source/Options/: Options.tsx  styles.scss
source/Popup/: Popup.tsx  styles.scss
source/styles/: global.scss
source/utils/: storage.ts
tauri-app/: .prettierignore  ANDROID_BUILD.md  ANDROID_QUICK_START.md  ANDROID_SETUP_GUIDE.md  ANDROID_SUMMARY.md  ANDROID_UI_UPDATE.md  BUILD_COMMANDS.md  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLICK_THROUGH_BEHAVIOR.md  COLOR_CUSTOMIZER_CENTRALIZED.md  COLOR_CUSTOMIZER_FIXES.md  COLOR_CUSTOMIZER_IMPROVEMENTS.md  CONTROL_PANEL.md  CROSS_PLATFORM_LIMITATIONS.md  FEATURES.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  INSTALL_ANDROID_SDK.md  LINT_AND_BUILD_SETUP.md  LINUX_REQUIREMENTS.md  PERFORMANCE_OPTIMIZATIONS.md  PLATFORM_BUILDS_SUMMARY.md  PLATFORM_BUILD_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP.md  THEME_CUSTOMIZER_GUIDE.md  THEME_CUSTOMIZER_PERFORMANCE_FIX.md  THEME_CUSTOMIZER_SUMMARY.md  UI_GUIDE.md  WELCOME_SCREEN.md  WELCOME_SCREEN_FIX.md  WINDOWS_BUILD_FIX.md  (+8 more)
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: android.json
tauri-app/src-tauri/icons/: README.md  icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: AndroidHome.css  AndroidHome.tsx  ClickThroughIndicator.css  ClickThroughIndicator.tsx  ColorCustomizer.css  ColorCustomizer.tsx  ColorCustomizer.tsx.backup  ControlPanel.css  ControlPanel.tsx  ErrorBoundary.tsx  MagicMouse.tsx  Settings.css  Settings.tsx  ThemeCustomizer.css  ThemeCustomizer.tsx  Welcome.css  Welcome.tsx
