[package]
name = "magic-cursor"
version = "1.0.0"
description = "Magic Cursor - Desktop overlay application"
authors = ["Magic Cursor Team"]
license = "MIT"
repository = "https://github.com/magic-cursor/magic-cursor"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size

[build-dependencies]
tauri-build = { version = "1.5", features = [] }



[dependencies]
tauri = { version = "1.5", features = [ "os-all", "window-set-fullscreen", "window-hide", "window-show", "window-set-ignore-cursor-events", "window-close", "window-set-always-on-top", "window-minimize", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm"
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
